# src/routes/v2/special/handler.ts
@@ -5,15 +5,15 @@ import { buildSelectFromInclude } from "../include.js"
 
 import { Source, knex } from "../../../db.js"
 import { CacheTimes, cacheReply, zHook } from "../../../utils.js"
-import { specialInputSchema } from "./schemas/special.js"
+import { specialImdbInputSchema, specialInputSchema } from "./schemas/special.js"
 
 export const specialRoutes = new Hono()
-	.get("/thetvdb", zValidator("query", specialInputSchema, zHook), async (c) => {
+	.get("/imdb", zValidator("query", specialImdbInputSchema, zHook), async (c) => {
 		const query = c.req.query()
 
 		const data = await knex
 			.select(buildSelectFromInclude(query.include))
-			.where({ [Source.TheTVDB]: query.id })
+			.where({ [Source.IMDB]: query.id })
 			.from("relations")
 
 		cacheReply(c.res, CacheTimes.SIX_HOURS)
@@ -26,6 +26,18 @@ export const specialRoutes = new Hono()
 		const data = await knex
 			.select(buildSelectFromInclude(query.include))
 			.where({ [Source.TheMovieDB]: query.id })
+			.from("relations")
+
+		cacheReply(c.res, CacheTimes.SIX_HOURS)
+
+		return c.json(data)
+	})
+	.get("/thetvdb", zValidator("query", specialInputSchema, zHook), async (c) => {
+		const query = c.req.query()
+
+		const data = await knex
+			.select(buildSelectFromInclude(query.include))
+			.where({ [Source.TheTVDB]: query.id })
 			.from("relations")
 
 		cacheReply(c.res, CacheTimes.SIX_HOURS)
